--- a/src/components/css/Feed.css
+++ b/src/components/css/Feed.css
@@ -3,3 +3,18 @@
   flex-direction: column;
   flex: 0.6;
 }
+form{
+  margin: 3rem auto;
+  max-width: 450px;
+}
+form h1{
+  margin-block: 2rem;
+}
+form input{
+  max-width: 400px;
+}
+
+.addQuestion
+{
+  margin-right: 1rem;
+}
